# xebia-cli

./: .gitignore  Cargo.toml  README.md  cli.yml
.circleci/: config.yml
config/: debug.toml  default.toml  dev.toml
src/: auth.rs  collections.rs  commands.rs  echo.rs  main.rs  meti.rs  settings.rs  stats.rs  xdd_api_client.rs
