[package]
name = "xebia-cli"
version = "0.1.0"
authors = ["Alexis Horgix Chotard <alexis.horgix.chotard@gmail.com>"]

[dependencies]
restson = "^0.5.2"
serde = "^1.0.88"
serde_derive = "^1.0.88"
serde_json = "1.0.39"
clap = {version = "2.32.0", features = ["yaml"]}
config = "0.9.2"
log = "0.4.6"
simplelog = "0.5.3"
